# creaitors

./: LICENSE  README.md
.github/workflows/: agent-framework.yml
agent_framework/: .gitignore  pyproject.toml
agent_framework/libertai_agents_self_hosting/: provider.py
agent_framework/libertai_unstoppable_denver_agents/: interfaces.py  main.py  provider.py
backend/: .env  .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  build_and_execute.sh  pyproject.toml
backend/src/backend/: __about__.py  __init__.py  agent.py  aleph.py  blockchain.py  config.py  main.py  models.py  orchestrator.py  ssh.py  utils.py
backend/src/backend/scripts/: deploy.sh  poetry.Dockerfile
backend/tests/: __init__.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: loader.tsx
frontend/src/components/AccountButton/: cmp.tsx  styles.tsx  types.ts
frontend/src/components/AgentCard/: cmp.tsx  styles.ts
frontend/src/components/AgentDetails/: cmp.tsx
frontend/src/components/AgentList/: cmp.tsx
frontend/src/components/AppFooter/: cmp.tsx
frontend/src/components/AppHeader/: cmp.tsx  styles.ts
frontend/src/components/ChainProvider/: cmp.tsx
frontend/src/components/ConnectWalletButton/: cmp.tsx
frontend/src/components/DeployedAgentDetails/: cmp.tsx
frontend/src/components/Logos/: ethereum.tsx
frontend/src/components/PageContainer/: cmp.tsx
frontend/src/components/SidePanel/: cmp.tsx  index.tsx  styles.tsx  types.tsx
frontend/src/components/StepProgressIndicator/: cmp.tsx
frontend/src/components/UploadAgentForm/: cmp.tsx
frontend/src/components/WalletEventListener/: cmp.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  form.tsx  login-dropdown.tsx
frontend/src/config/: okto.ts
frontend/src/hooks/: useAccount.ts  useCachedImage.ts  useFetchAgents.ts  useFetchDeployedAgents.ts  useSignMessage.ts
frontend/src/hooks/breakpoints/: useBreakpoints.ts  useMediaQuery.ts
frontend/src/lib/: creaitorsClient.ts  utils.ts
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/pages/api/: deploy.ts
frontend/src/pages/api/agent/: [agentDeployId].ts
frontend/src/pages/deploy/[agentId]/: index.tsx
frontend/src/pages/deployed-agents/: index.tsx
frontend/src/pages/deployed-agents/[agentDeployId]/: index.tsx
frontend/src/pages/marketplace/: index.tsx
frontend/src/store/: store.ts
frontend/src/store/reducers/: alephSlice.ts  connectionSlice.ts  installPromptSlice.ts
frontend/src/styles/: globals.css
frontend/src/types/: agent.ts
frontend/src/utils/: constants.ts
